--- a/src/Landing/Landing.module.css
+++ b/src/Landing/Landing.module.css
@@ -7,7 +7,7 @@ html{
 }
 
 body{
-  background-image: url('../images/10730.jpg'); 
+  background-image: url('../images/background.jpg'); 
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -15,7 +15,8 @@ body{
   background-color: none;
   scroll-behavior: unset;
   overflow: hidden; 
-  max-height: 70vh;
+  position: absolute;
+  
   
 }
 
@@ -23,13 +24,17 @@ body{
 .wrapper{
   display: grid; 
   grid-template-columns: repeat(1, 1fr); 
-  grid-template-rows: 100px 700px; 
+  grid-template-rows: 1fr 3fr 6fr ; 
   background: none; 
-  margin: 80px 150px;  
+  margin: 0 auto;  
   grid-row-gap: 1em;
   justify-content: center; 
-  align-content: start;  
-  max-height: 450px;
+  align-content: start;   
+  position: relative;
+  max-height: 100vh;
+   
+   
+   
 } 
 
 
@@ -58,7 +63,9 @@ body{
     display: grid; 
     grid-template-columns: 5fr 5fr; 
     grid-column-gap: 1em;  
-    max-height: 240px;
+    width: 100%;
+    margin: 0 auto;
+    
 }
 
 
@@ -132,6 +139,15 @@ input {
   margin-left: 10px;
 } 
 
+.advertImages{
+  display: grid; 
+  grid-template-columns: 1fr 5fr 5fr 5fr;;
+  max-height: 150px;
+} 
+.advertImages img {
+  height: 250px;
+}
+
 .footer{
   position:absolute;
   bottom:0;
@@ -147,6 +163,7 @@ input {
 
 .footer h5 {
  margin: 0px;
+ padding: 0px;
 } 
 
 .footer img {
