--- a/src/Toolbar/Toolbar.module.css
+++ b/src/Toolbar/Toolbar.module.css
@@ -1,5 +1,66 @@
-.toolbar{
+.toolbar {
+    top: 0px; 
+    left: 0px;
     position: fixed; 
     width: 100%; 
-    background: #521751;
+    background: #e3e2e7;
+    height: 56px;
+} 
+
+.toolbar__logo a {
+  color: white; 
+  text-decoration: none;
+  font-size: 2rem; 
+
+} 
+
+.toolbar__navigation{
+    display: flex; 
+    align-items: center; 
+    height: 100%; 
+    padding: 0 1rem;
+}  
+
+
+.toolbar__navigation img{
+      max-height: 53px; 
+      top: 0;
+      left: 0;
+      padding: 0;
+    
+} 
+
+.toolbar__navigation_items a {
+    color: rgb(45, 123, 197); 
+    text-decoration: none;
+} 
+
+.toolbar__navigation_items ul {
+    list-style: none; 
+    margin: 0; 
+    padding: 0; 
+    display: flex;
+} 
+
+.toolbar__navigation_items li {
+    padding: 0 0.5rem; 
+    
 }
+
+.spacer{
+    flex: 1;
+}
+
+.toolbar__navigation_items a:hover, 
+.toolbar__navigation_items a:active {
+    color: #fa923f; 
+}
+
+.logout__button{
+ background-color: rgb(187, 107, 33);
+ border-radius: 50px;
+}
+.logout__button:hover{
+    background-color: rgb(215, 221, 127);
+    
+   }
