--- a/src/Home/Home.module.css
+++ b/src/Home/Home.module.css
@@ -38,20 +38,27 @@ body{
     font-family: 'Arvo', serif;
     font-size: 1rem; 
     color: rgb(45, 123, 197); 
+    margin: 24px; 
+    
+    
+
    
 }
 .left__sidebar__content li:hover, 
 .left__sidebar__content li:active {
    color: yellow;
    cursor: pointer;
+   border-top: 3px solid white;
+   border-bottom: 3px solid white;
    
 } 
 
 .Content{
     width: 100vw;
     height: 100vh;
-    background-color: white; 
+    background-color: white;
     left: 247px;
     position: relative;
-    border-radius: 50px 0 0 0;
+    
+    border: 2px solid yellow; 
 }
