--- a/src/Home/Home.module.css
+++ b/src/Home/Home.module.css
@@ -18,7 +18,7 @@ body{
 }
 
 .left__sidebar__content{
-    max-width: 160px; 
+    max-width: 200px; 
     margin: 0 auto; 
     height: 100%;
     background-color: none;
@@ -26,6 +26,7 @@ body{
 }
 
 .left__sidebar__content ul{
+    
     list-style: none;
     margin: 0 auto; 
     padding-top: 100px;
@@ -33,30 +34,34 @@ body{
 }
 
 .left__sidebar__content li{
+    text-decoration: none;
     padding: 0; 
     margin-top: 45px;;
     font-family: 'Arvo', serif;
     font-size: 1rem; 
     color: rgb(45, 123, 197); 
     margin: 24px; 
-    
-    
-
-   
+      
 }
-.left__sidebar__content li:hover, 
-.left__sidebar__content li:active {
-   color: yellow;
-   cursor: pointer;
-   border-top: 3px solid white;
-   border-bottom: 3px solid white;
-   
-} 
+
+.left__sidebar__content a{
+    text-decoration: none;
+    color: rgb(235, 243, 116);
+           
+}
+
+.left__sidebar__content a:active, 
+.left__sidebar__content a:hover,
+.left__sidebar__content a.active  
+{
+    color: orange;
+           
+}
 
 .Content{
     width: 100vw;
     height: 100vh;
-    background-color: white;
+    background-color: rgb(252, 251, 249);
     left: 247px;
     position: relative;
     
