Adding new item image upload and storing it on firebase done. Displaying the uploaded image done

--- a/src/Login/Login.module.css
+++ b/src/Login/Login.module.css
@@ -185,14 +185,14 @@ input {
 }
 
 .footer{
-  position:absolute;
+  position:fixed;
   bottom:0;
   left:0;
   width:100%;
   background-color: black; 
   color: white; 
   max-height: 25%;
-  top:auto;
+
   
  
 } 
