MyItem component was modified

--- a/src/MyItems/MyItems.module.css
+++ b/src/MyItems/MyItems.module.css
@@ -64,10 +64,14 @@ overflow-x: hidden;
 } 
 
 
-.Items_Gallery button {
+.Items_addButton button {
     background-color: greenyellow;
     width: 120px; 
     height: 45px;
+    float: right;
+    margin-top: 5%;
+    max-height: 35px;
+    border-radius: 25px;
 }
 
 .MyItems__right__container{
@@ -94,13 +98,13 @@ overflow-x: hidden;
     padding-top: 5%;
 } 
 
-.MyItems__right__container__block{
+/* .MyItems__right__container__block{
     width: 100%; 
     min-height: 600px; 
     background-color: rgb(194, 193, 219);
     scroll-behavior: smooth;
     overflow: scroll;
-}
+} */
 
 .MyItems__right__container__block__item{
     min-height: 210px;
