Added new items also displayed along with BarterOffers feature complete

--- a/src/BarterItem/BarterItem.module.css
+++ b/src/BarterItem/BarterItem.module.css
@@ -30,6 +30,21 @@
     
     
 }
+
+.itemdescription__myItem{
+    background-color: rgb(229, 230, 231);
+    grid-auto-rows: minmax(100px, auto);
+    top: 0; 
+    left:0;
+    display: grid;  
+    grid-template-rows: 140px;
+    justify-items: start;
+    min-height: 129px; 
+    margin-bottom: 8px;
+    
+    
+}
+
 .itemdescription p{
     margin: 0; 
     padding: 0;
