--- a/src/MyItems/MyItems.module.css
+++ b/src/MyItems/MyItems.module.css
@@ -80,6 +80,10 @@ overflow-x: hidden;
     background-color: rgb(236, 234, 227);
     right:25px;
     max-width: 13vw;
+    overflow: scroll;
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+    max-height: 56vh;
 }
 
 .MyItems__right__container__header{
@@ -101,8 +105,8 @@ overflow-x: hidden;
 .MyItems__right__container__block{
     width: 100%; 
     min-height: 600px; 
-    background-color: rgb(218, 213, 205);
+    background-color: rgb(176, 194, 253);
     scroll-behavior: smooth;
-    overflow: scroll;
+    
 }
 
