--- a/src/BarterItem/BarterItem.module.css
+++ b/src/BarterItem/BarterItem.module.css
@@ -52,7 +52,7 @@
 } 
 
 .description__text p{
-    font-size: 17x; 
+    text-transform: capitalize;
     font-family: Arial, Helvetica, sans-serif;
     margin-bottom: 5px;
 }
